fix: overflow

--- a/src/Thin-Style-Windows.less
+++ b/src/Thin-Style-Windows.less
@@ -58,6 +58,7 @@ body[for="html-export"] {
     padding: 40px 40px 40px 40px !important;
     width: auto;
     word-spacing: 1px;
+    overflow-x: hidden !important;
 
     mybr {
         display: block;
